--- a/index.html
+++ b/index.html
@@ -405,9 +405,94 @@
                         </li>
                     </ul>
         </div>
-
-    </div>
+        <div class="footer-sub-wrap">
+            <p class="footer-subtext">Subscribe</p>
+                <form class="footer-sub-form">
+                    <label class="footer-sub-label">
+                        <input class="footer-sub-input" type="email" name="email-field" placeholder="E-mail" />
+                    </label>
+                    <button type="submit" name="email-sub-button" class="footer-sub-button">
+                        Subscribe
+                            <svg class="footer-sub-icon"  width="24" height="24">
+                                <use href="./images/icons.svg#icon-icon-send"></use>
+                            </svg>
+                    </button>
+                </form>
+        </div>
+            </div>
     </footer>
+    <div class="backdrop"></div>
+
+
+
+
+        <div class="backdrop is-hidden" data-modal>
+            <div class="modal">
+                <button class="modal-button-close" type="button" data-modal-close>
+                 <svg class="modal-icon-close"  width="8" height="8">
+                    <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
+                </svg>
+                </button>
+
+                <p class="modal-text">
+                    Leave your contacts and we will call you back
+                </p>
+
+                <form class="modal-form">
+                    <div class="modal-wrapper">
+                        <label class="modal-label" for="user-text">Name</label>
+                        <div class="modal-icon-wrap">
+                            <input class="modal-input" type="text" name="user-name" id="user-text" required />
+                            <svg class="modal-icon" width="18" height="24">
+                                <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
+                            </svg>
+                        </div>
+                    </div>
+
+                    <div class="modal-wrapper">
+                        <label class="modal-label" for="phone-number">Phone</label>
+                        <div class="modal-icon-wrap">
+                            <input class="modal-input" type="tel" name="phone-number" id="phone-number" required/>
+                            <svg class="modal-icon" width="18" height="24">
+                                <use href="./images/icons.svg#icon-Vector"></use>
+                            </svg>
+                        </div>
+                    </div>
+
+                    <div class="modal-wrapper">
+                        <label class="modal-label" for="user-email">Email</label>
+                        <div class="modal-icon-wrap">
+                            <input class="modal-input" type="email" name="user-email" id="usere-mail" required/>
+                            <svg class="modal-icon"  width="18" height="24">
+                                <use href="./images/icons.svg#icon-letter"></use>
+                            </svg>
+                        </div>
+                    </div>
+
+                    <div class="modal-text-field-wrapper">
+                        <label class="modal-label" for="user-comment">Comment</label>
+                        <textarea class="modal-text-field" name="user-comment" id="user-comment"
+                            placeholder="Text input"></textarea>
+                    </div>
+
+                    <div class="modal-check-wrap">
+                        <input class="modal-check-input visually-hidden" type="checkbox" name="user-privacy" id="user-privacy"
+                            value="true" />
+                        <label class="modal-check-text" for="user-privacy">
+                            <span class="modal-check-box">
+                                <svg class="modal-icon-check" width="10" height="8">
+                                    <use href="./images/icons.svg#icon-check"></use>
+                                </svg></span>
+                             I accept the terms and conditions of the
+                            <a class="modal-link-pp" href="">Privacy Policy</a></label>
+                    </div>
+
+                    <button class="modal-btn-sub" type="submit">Send</button>
+                </form>
+            </div>
+        </div>
+    </div>
+
 </body>
 
 </html>
