--- a/index.html
+++ b/index.html
@@ -440,9 +440,9 @@
 
                 <form class="modal-form">
                     <div class="modal-wrapper">
-                        <label class="modal-label" for="user-text">Name</label>
+                        <label class="modal-label" for="user-name">Name</label>
                         <div class="modal-icon-wrap">
-                            <input class="modal-input" type="text" name="user-name" id="user-text" required />
+                            <input class="modal-input" type="text" name="user-name" id="user-name" required />
                             <svg class="modal-icon" width="18" height="24">
                                 <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
                             </svg>
@@ -460,10 +460,10 @@
                     </div>
 
                     <div class="modal-wrapper">
-                        <label class="modal-label" for="user-email">Email</label>
+                        <label class="modal-label" for="user-mail">Email</label>
                         <div class="modal-icon-wrap">
-                            <input class="modal-input" type="email" name="user-email" id="usere-mail" required/>
-                            <svg class="modal-icon"  width="18" height="24">
+                            <input class="modal-input" type="email" name="user-email" id="user-mail" required />
+                            <svg class="modal-icon" width="18" height="24">
                                 <use href="./images/icons.svg#icon-letter"></use>
                             </svg>
                         </div>
@@ -491,8 +491,6 @@
                 </form>
             </div>
         </div>
-    </div>
-
 </body>
 
 </html>
